force-app/main/default/objects/Case/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <description>Também pode ser usado como critério de distribuição.</description>
    <label>Modalidade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A definir</fullName>
                <default>true</default>
                <label>A definir</label>
            </value>
            <value>
                <fullName>Importação</fullName>
            </value>
            <value>
                <fullName>Exportação</fullName>
            </value>
            <value>
                <fullName>Cabotagem Descarga</fullName>
            </value>
            <value>
                <fullName>Cabotagem Embarque</fullName>
            </value>
            <value>
                <fullName>Operação de Navio</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
            <value>
                <fullName>Carga de projeto</fullName>
            </value>
            <value>
                <fullName>Recinto DTA e DTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>