force-app/main/default/objects/Case/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>