force-app/main/default/objects/Case/fields/MotivoAcompanhamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoAcompanhamento__c</fullName>
    <description>Registra o motivo da entrada controlada do Case em acompanhamento com pausa de SLA.</description>
    <inlineHelpText>Select the operational reason to put the Case on follow-up.</inlineHelpText>
    <label>Motivo do Acompanhamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operação externa</fullName>
            </value>
            <value>
                <fullName>Aguardando cliente</fullName>
            </value>
            <value>
                <fullName>Aguardando terceiro</fullName>
            </value>
            <value>
                <fullName>Aguardando movimentação operacional</fullName>
            </value>
            <value>
                <fullName>Aguardando documentação</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>