force-app/main/default/objects/Case/fields/NavioIMO__c.field-meta.xml
<CustomField>
    <fullName>NavioIMO__c</fullName>
    <description>Número IMO do navio relacionado ao caso.</description>
    <label>Navio (IMO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>