force-app/main/default/objects/Case/fields/NavioNome__c.field-meta.xml
<CustomField>
    <fullName>NavioNome__c</fullName>
    <description>Nome do navio relacionado ao caso.</description>
    <label>Navio (Nome)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>