force-app/main/default/objects/Case/fields/Nivel__c.field-meta.xml
<CustomField>
    <fullName>Nivel__c</fullName>
    <description>Nível de classificação ou severidade aplicado ao caso conforme processo interno.</description>
    <label>Nível</label>
    <length>255</length>
    <type>Text</type>
</CustomField>