force-app/main/default/objects/Case/fields/NomeArquivo__c.field-meta.xml
<CustomField>
    <fullName>NomeArquivo__c</fullName>
    <description>Nome do arquivo anexado ou referenciado no caso.</description>
    <label>Nome do Arquivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>