force-app/main/default/objects/Case/fields/NomeDaTela__c.field-meta.xml
<CustomField>
    <fullName>NomeDaTela__c</fullName>
    <description>Nome da tela ou sistema de origem onde o caso foi registrado ou identificado.</description>
    <label>Nome da Tela</label>
    <length>255</length>
    <type>Text</type>
</CustomField>