force-app/main/default/objects/Case/fields/NomenclaturaAntiga__c.field-meta.xml
<CustomField>
    <fullName>NomenclaturaAntiga__c</fullName>
    <description>Nomenclatura anterior do item ou registro alterado, usada para rastreabilidade da mudança.</description>
    <label>Nomenclatura Antiga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>