force-app/main/default/objects/Case/fields/NomenclaturaNova__c.field-meta.xml
<CustomField>
    <fullName>NomenclaturaNova__c</fullName>
    <description>Nova nomenclatura do item ou registro após a alteração.</description>
    <label>Nomenclatura Nova</label>
    <length>255</length>
    <type>Text</type>
</CustomField>