force-app/main/default/objects/Case/fields/NomeOrganizacao__c.field-meta.xml
<CustomField>
    <fullName>NomeOrganizacao__c</fullName>
    <description>Nome da organização informada no atendimento do caso.</description>
    <label>Nome da Organização</label>
    <length>255</length>
    <type>Text</type>
</CustomField>