force-app/main/default/objects/Case/fields/NovaRazaoSocial__c.field-meta.xml
<CustomField>
    <fullName>NovaRazaoSocial__c</fullName>
    <description>Nova razão social da empresa após alteração cadastral.</description>
    <label>Nova Razão Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>