force-app/main/default/objects/Case/fields/NovoEmail__c.field-meta.xml
<CustomField>
    <fullName>NovoEmail__c</fullName>
    <description>Novo e-mail informado para atualização de cadastro.</description>
    <label>Novo E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>