force-app/main/default/objects/Case/fields/NovoEndereco__c.field-meta.xml
<CustomField>
    <fullName>NovoEndereco__c</fullName>
    <description>Novo endereço informado para atualização de cadastro.</description>
    <label>Novo Endereço</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>