force-app/main/default/objects/Case/fields/NumeroConteiner__c.field-meta.xml
<CustomField>
    <fullName>NumeroConteiner__c</fullName>
    <description>Exibido para atendimentos operacionais/logísticos.</description>
    <label>Número do Contêiner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>