force-app/main/default/objects/Case/fields/NumeroFatura__c.field-meta.xml
<CustomField>
    <fullName>NumeroFatura__c</fullName>
    <description>Usado em faturamento, cobrança ou contestação.</description>
    <label>Número Fatura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>