force-app/main/default/objects/Case/fields/NumeroLacre__c.field-meta.xml
<CustomField>
    <fullName>NumeroLacre__c</fullName>
    <description>Número do lacre original aplicado ao contêiner ou carga relacionada ao caso.</description>
    <label>Nº Lacre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>