force-app/main/default/objects/Case/fields/NumeroLacreAlterado__c.field-meta.xml
<CustomField>
    <fullName>NumeroLacreAlterado__c</fullName>
    <description>Número do novo lacre aplicado após substituição relacionada ao caso.</description>
    <label>Nº Lacre Alterado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>