force-app/main/default/objects/Case/fields/NumeroNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NumeroNotaFiscal__c</fullName>
    <description>Número da nota fiscal relacionada ao caso.</description>
    <label>Nº Nota Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>