force-app/main/default/objects/Case/fields/NumeroOrdemServico__c.field-meta.xml
<CustomField>
    <fullName>NumeroOrdemServico__c</fullName>
    <description>Número da ordem de serviço relacionada ao caso.</description>
    <label>Nº Ordem de Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>