force-app/main/default/objects/Case/fields/NumeroPODraft__c.field-meta.xml
<CustomField>
    <fullName>NumeroPODraft__c</fullName>
    <description>Número do PO (Purchase Order) ou Draft relacionado ao caso.</description>
    <label>Nº PO/Draft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>