force-app/main/default/objects/Case/fields/NumeroProposta__c.field-meta.xml
<CustomField>
    <fullName>NumeroProposta__c</fullName>
    <description>Número da proposta comercial relacionada ao caso.</description>
    <label>Nº Proposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>