force-app/main/default/objects/Case/fields/NumeroPropostaSalesforce__c.field-meta.xml
<CustomField>
    <fullName>NumeroPropostaSalesforce__c</fullName>
    <description>Número da proposta registrada no Salesforce relacionada ao caso.</description>
    <label>Nº Proposta Salesforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>