force-app/main/default/objects/Case/fields/OrganizacaoValidadaApp__c.field-meta.xml
<CustomField>
    <fullName>OrganizacaoValidadaApp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conta validada no aplicativo associada à organização informada no caso.</description>
    <label>Organização Validada no App</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Organização Validada no App)</relationshipLabel>
    <relationshipName>CasosOrganizacaoValidadaApp</relationshipName>
    <type>Lookup</type>
</CustomField>