force-app/main/default/objects/Case/fields/OrigemDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>OrigemDistribuicao__c</fullName>
    <description>Valores sugeridos: Categorização, Seleção Manual, Rota de E-mail, Bot, Formulário, Agendamento.</description>
    <label>Origem Distribuição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Categorização</fullName>
                <default>true</default>
                <label>Categorização</label>
            </value>
            <value>
                <fullName>Seleção Manual</fullName>
            </value>
            <value>
                <fullName>Rota de E-mail</fullName>
            </value>
            <value>
                <fullName>Bot</fullName>
            </value>
            <value>
                <fullName>Formulário</fullName>
            </value>
            <value>
                <fullName>Agendamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>