force-app/main/default/objects/Case/fields/PeriodoQuestionado__c.field-meta.xml
<CustomField>
    <fullName>PeriodoQuestionado__c</fullName>
    <description>Período em que o fato questionado no caso ocorreu.</description>
    <label>Período Questionado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>