force-app/main/default/objects/Case/fields/PesquisaEnviada__c.field-meta.xml
<CustomField>
    <fullName>PesquisaEnviada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que o envio foi realizado.</description>
    <label>Pesquisa de Satisfação Enviada</label>
    <type>Checkbox</type>
</CustomField>