force-app/main/default/objects/Case/fields/PlacaCavalo__c.field-meta.xml
<CustomField>
    <fullName>PlacaCavalo__c</fullName>
    <description>Placa do cavalo mecânico (veículo trator) relacionado ao transporte do caso.</description>
    <label>Placa Cavalo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>