force-app/main/default/objects/Case/fields/PortoCodigoMercante__c.field-meta.xml
<CustomField>
    <fullName>PortoCodigoMercante__c</fullName>
    <description>Código Mercante do porto relacionado ao caso.</description>
    <label>Porto (Código Mercante)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>