force-app/main/default/objects/Case/fields/PortoNome__c.field-meta.xml
<CustomField>
    <fullName>PortoNome__c</fullName>
    <description>Nome do porto relacionado ao caso.</description>
    <label>Porto (Nome)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>