force-app/main/default/objects/Case/fields/PossuiCasoRelacionado__c.field-meta.xml
<CustomField>
    <fullName>PossuiCasoRelacionado__c</fullName>
    <formula>NOT(ISBLANK(Parent.Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possui Caso Relacionado?</label>
    <type>Checkbox</type>
</CustomField>