force-app/main/default/objects/Case/fields/ProcedenciaReclamacao__c.field-meta.xml
<CustomField>
    <fullName>ProcedenciaReclamacao__c</fullName>
    <description>Pode apoiar indicadores e objeto de Reclamações Salvador.</description>
    <label>Procedência da Reclamação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Procedente</fullName>
            </value>
            <value>
                <fullName>Improcedente</fullName>
            </value>
            <value>
                <fullName>Parcialmente Procedente</fullName>
            </value>
            <value>
                <fullName>A definir</fullName>
                <default>true</default>
                <label>A definir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>