force-app/main/default/objects/Case/fields/Processo__c.field-meta.xml
<CustomField>
    <fullName>Processo__c</fullName>
    <description>Identifica o processo de negócio relacionado ao caso.</description>
    <label>Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>