force-app/main/default/objects/Case/fields/QtdAreasParticipantesAbertas__c.field-meta.xml
<CustomField>
    <fullName>QtdAreasParticipantesAbertas__c</fullName>
    <description>Campo resumo/controle para apoiar validações e relatórios.</description>
    <label>Qtde de Áreas Participante Abertas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>