force-app/main/default/objects/Case/fields/QtdAreasParticipantesVencidas__c.field-meta.xml
<CustomField>
    <fullName>QtdAreasParticipantesVencidas__c</fullName>
    <description>Campo resumo/controle para apoiar dashboards e alertas.</description>
    <label>Qtde de Áreas Participantes Vencidas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>