force-app/main/default/objects/Case/fields/ReclamacaoDecisaoManual__c.field-meta.xml
<CustomField>
    <fullName>ReclamacaoDecisaoManual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca que a decisão de gerar (ou não) a Reclamação foi capturada explicitamente pela tela assistida de encerramento (caseClosureSurvey), para que a geração automática via trigger não decida de novo nesta mesma transação.</description>
    <label>Decisão Manual de Reclamação Registrada</label>
    <type>Checkbox</type>
</CustomField>