force-app/main/default/objects/Case/fields/ReclamacaoGerada__c.field-meta.xml
<CustomField>
    <fullName>ReclamacaoGerada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evita duplicidade de geração do registro no objeto de reclamações quando Case de Salvador/Reclamação for encerrado.</description>
    <label>Reclamação Gerada</label>
    <type>Checkbox</type>
</CustomField>