force-app/main/default/objects/Case/fields/ReferenciaProcesso__c.field-meta.xml
<CustomField>
    <fullName>ReferenciaProcesso__c</fullName>
    <description>Código ou número de referência do processo relacionado ao caso.</description>
    <label>Referência do Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>