force-app/main/default/objects/Case/fields/Representante__c.field-meta.xml
<CustomField>
    <fullName>Representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conta do despachante, escritório, transportadora, comissária ou terceiro representante do requisitante.</description>
    <label>Representante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos por Representante</relationshipLabel>
    <relationshipName>CasosPorRepresentante</relationshipName>
    <type>Lookup</type>
</CustomField>