force-app/main/default/objects/Case/fields/RepresentanteOuBroker__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteOuBroker__c</fullName>
    <description>Identifica se quem solicitou o caso é Representante ou Broker.</description>
    <label>Representante ou Broker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Representante</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>