force-app/main/default/objects/Case/fields/ResponsavelAvaria__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelAvaria__c</fullName>
    <description>Nome do responsável apontado pela avaria relacionada ao caso.</description>
    <label>Responsável Avaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>