force-app/main/default/objects/Case/fields/SetorResponsavel__c.field-meta.xml
<CustomField>
    <fullName>SetorResponsavel__c</fullName>
    <description>Setor interno responsável pelo tratamento do caso.</description>
    <label>Setor Responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>