force-app/main/default/objects/Case/fields/SolucaoCaso__c.field-meta.xml
<CustomField>
    <fullName>SolucaoCaso__c</fullName>
    <description>Descrição da solução aplicada.</description>
    <label>Solução do Caso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>