force-app/main/default/objects/Case/fields/SubassuntoCasoRelacionado__c.field-meta.xml
<CustomField>
    <fullName>SubassuntoCasoRelacionado__c</fullName>
    <formula>TEXT( Parent.Subassunto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subassunto Caso Relacionado</label>
    <type>Text</type>
</CustomField>