force-app/main/default/objects/Case/fields/TipoArquivo__c.field-meta.xml
<CustomField>
    <fullName>TipoArquivo__c</fullName>
    <description>Tipo do arquivo anexado ou referenciado no caso.</description>
    <label>Tipo de Arquivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>