force-app/main/default/objects/Case/fields/TipoCasoRelacionado__c.field-meta.xml
<CustomField>
    <fullName>TipoCasoRelacionado__c</fullName>
    <formula>TEXT( Parent.TipoCaso__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Caso Relacionado</label>
    <type>Text</type>
</CustomField>