force-app/main/default/objects/Case/fields/UltimoComentarioAcompanhamento__c.field-meta.xml
<CustomField>
    <fullName>UltimoComentarioAcompanhamento__c</fullName>
    <description>Armazena o último comentário informado no processo de acompanhamento do Case.</description>
    <inlineHelpText>Comentário operacional mais recente informado no acompanhamento.</inlineHelpText>
    <label>Último Comentário do Acompanhamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>