force-app/main/default/objects/Case/fields/UN__c.field-meta.xml
<CustomField>
    <fullName>UN__c</fullName>
    <label>UN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>