force-app/main/default/objects/Case/fields/UnidadeNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadeNegocio__c</fullName>
    <description>Define a área de negócio do Case. Usado para visibilidade, fila, categorização, relatórios e Permission Sets.</description>
    <label>Unidade de Negócio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnidadeNegocio</valueSetName>
    </valueSet>
</CustomField>