force-app/main/default/objects/Case/fields/UsuarioInicioAcompanhamento__c.field-meta.xml
<CustomField>
    <fullName>UsuarioInicioAcompanhamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário que colocou o Case em acompanhamento.</description>
    <inlineHelpText>Usuário preenchido automaticamente ao iniciar acompanhamento.</inlineHelpText>
    <label>Usuário de Início do Acompanhamento</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases em Acompanhamento Iniciados</relationshipLabel>
    <relationshipName>CasesAcompanhamentoIniciados</relationshipName>
    <type>Lookup</type>
</CustomField>