force-app/main/default/objects/Case/fields/ValorContestado__c.field-meta.xml
<CustomField>
    <fullName>ValorContestado__c</fullName>
    <description>Usado em reclamações ou contestações financeiras.</description>
    <label>Valor Contestado</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>