force-app/main/default/objects/Case/fields/ViagemNavio__c.field-meta.xml
<CustomField>
    <fullName>ViagemNavio__c</fullName>
    <description>Número ou identificação da viagem do navio relacionada ao caso.</description>
    <label>Viagem Navio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>