force-app/main/default/objects/Case/fields/WS_Email_Route_Key__c.field-meta.xml
<CustomField>
    <fullName>WS_Email_Route_Key__c</fullName>
    <description>Identifica a rota que criou/processou o Case no Email-to-Case custom.</description>
    <label>Chave da Rota de E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>