force-app/main/default/objects/Case/fields/WS_Original_Case__c.field-meta.xml
<CustomField>
    <fullName>WS_Original_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso de origem relacionado quando um novo Case é criado a partir de um Case fechado, conforme configuração da rota.</description>
    <label>Caso Original</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Casos Relacionados</relationshipLabel>
    <relationshipName>WS_Original_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>