force-app/main/default/objects/Case/validationRules/Bloqueio_CNPJ_Formato_Invalido.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_CNPJ_Formato_Invalido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(CNPJ__c)),
NOT(REGEX(UPPER(CNPJ__c), &quot;[A-Z0-9]{12}[0-9]{2}&quot;))
)</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>CNPJ inválido. Informe 14 caracteres sem máscara, seguindo o novo padrão alfanumérico da Receita Federal (12 caracteres alfanuméricos + 2 dígitos verificadores numéricos).</errorMessage>
</ValidationRule>