force-app/main/default/objects/Case/validationRules/Bloqueio_CPF_Formato_Invalido.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_CPF_Formato_Invalido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(CPF__c)),
NOT(REGEX(CPF__c, &quot;[0-9]{11}&quot;))
)</errorConditionFormula>
    <errorDisplayField>CPF__c</errorDisplayField>
    <errorMessage>CPF inválido. Informe os 11 dígitos numéricos sem máscara (sem pontos ou hífen).</errorMessage>
</ValidationRule>