force-app/main/default/objects/Case/validationRules/Bloqueio_Horario_Entrega_Invalido.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_Horario_Entrega_Invalido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Horario_da_Entrega__c)),
NOT(REGEX(Horario_da_Entrega__c, &quot;([01][0-9]|2[0-3]):[0-5][0-9]&quot;))
)</errorConditionFormula>
    <errorDisplayField>Horario_da_Entrega__c</errorDisplayField>
    <errorMessage>Horário da Entrega inválido. Informe no formato HH:MM (ex: 14:30).</errorMessage>
</ValidationRule>