force-app/main/default/objects/Case/validationRules/Bloqueio_Navio_Nao_Informado.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_Navio_Nao_Informado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;AtendimentoRebocadores&quot;,
ISBLANK(NavioNome__c),
ISBLANK(NavioIMO__c)
)</errorConditionFormula>
    <errorDisplayField>NavioNome__c</errorDisplayField>
    <errorMessage>Informe pelo menos um: Navio (Nome) ou Navio (IMO).</errorMessage>
</ValidationRule>