force-app/main/default/objects/Case/validationRules/Bloqueio_Porto_Nao_Informado.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_Porto_Nao_Informado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;AtendimentoRebocadores&quot;,
ISBLANK(PortoNome__c),
ISBLANK(PortoCodigoMercante__c)
)</errorConditionFormula>
    <errorDisplayField>PortoNome__c</errorDisplayField>
    <errorMessage>Informe pelo menos um: Porto (Nome) ou Porto (Código Mercante).</errorMessage>
</ValidationRule>