force-app/main/default/objects/Case/listViews/Atendimento_Santo_Andre_Case.listView-meta.xml
<ListView>
    <fullName>Atendimento_Santo_Andre_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Atendimento Santo André - Case</label>
    <queue>Atendimento_Santo_Andre_Case</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>