force-app/main/default/objects/Case/listViews/CL_AtendimentoCliente_Case2.listView-meta.xml
<ListView>
    <fullName>CL_AtendimentoCliente_Case2</fullName>
    <filterScope>Queue</filterScope>
    <label>Atendimento Cliente - Centro Logístico</label>
    <queue>CL_AtendimentoCliente</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>