force-app/main/default/objects/Case/listViews/CL_AtendimentoN1_Case1.listView-meta.xml
<ListView>
    <fullName>CL_AtendimentoN1_Case1</fullName>
    <filterScope>Queue</filterScope>
    <label>Atendimento N1 - Centro Logístico</label>
    <queue>CL_AtendimentoN1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>