force-app/main/default/objects/Case/listViews/CL_Fila_4_Case.listView-meta.xml
<ListView>
    <fullName>CL_Fila_4_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Teste Fila Centro Logistico</label>
    <queue>CL_Fila_4</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>