force-app/main/default/objects/Case/listViews/CL_Financeiro_Case2.listView-meta.xml
<ListView>
    <fullName>CL_Financeiro_Case2</fullName>
    <filterScope>Queue</filterScope>
    <label>Atend. Financeiro - Centro Logístico</label>
    <queue>CL_Financeiro</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>