force-app/main/default/objects/Case/listViews/CL_Operacao_Case.listView-meta.xml
<ListView>
    <fullName>CL_Operacao_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Atendimento Operação - Centro Logístico</label>
    <queue>CL_Operacao</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>