force-app/main/default/objects/Case/listViews/CL_Transporte_Case.listView-meta.xml
<ListView>
    <fullName>CL_Transporte_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Atend. Transporte - Centro Logístico</label>
    <queue>CL_Transporte</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>